# close-coding-challenge-senior-engineer

./: README.md  pyproject.toml
close_challenge/: __init__.py  challenge.py  cli.py  client.py  exceptions.py  hashing.py
docs/superpowers/plans/: 2026-06-13-close-challenge.md
docs/superpowers/specs/: 2026-06-13-close-challenge-design.md
tests/: test_live.py
tests/unit/: test_challenge.py  test_cli.py  test_client.py  test_hashing.py
